testsuite/tests/rename/should_compile/T3103/GHC/Num.hs
{-# LANGUAGE NoImplicitPrelude #-}

module GHC.Num (fromInteger) where

import GHC.Base
import GHC.Num.Integer

fromInteger :: Num a => Integer -> a
fromInteger = fromInteger
