testsuite/tests/rename/should_fail/T5385.hs
{-# LANGUAGE GHC2021 #-}
module T5385 where

import T5385a( (:::) )
